--- a/forecast/app/config/routing.yml
+++ b/forecast/app/config/routing.yml
@@ -1,3 +1,3 @@
 app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+    path: /forecast
+    defaults: {_controller: AppBundle:Forecast:index}
